--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div id="categories-container"></div>
 
   <script>
-    const rapidApiKey = "a1a3468615mshf324b1e8f4bf20ep13eba9js81dac68689e6"; // Ta clé API RapidAPI
+    const huggingFaceApiKey = "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"; // Remplace par ta clé API Hugging Face
 
     async function fetchArticles() {
       try {
@@ -59,8 +59,11 @@
         const data = await response.json();
         const articles = data.results;
 
-        // Obtenir les similarités entre les titres
-        const categorizedArticles = await categorizeArticles(articles);
+        // Obtenir les embeddings pour chaque article
+        const embeddings = await getEmbeddingsForArticles(articles);
+        
+        // Clustering des articles par similarité
+        const categorizedArticles = clusterArticles(articles, embeddings);
         displayCategories(categorizedArticles);
       } catch (error) {
         console.error("Erreur lors du chargement des articles:", error);
@@ -68,59 +71,74 @@
       }
     }
 
-    // Fonction pour obtenir la similarité entre deux titres avec Twinword Text Similarity API
-    async function getSimilarity(title1, title2) {
-      const response = await fetch("https://twinword-text-similarity-v1.p.rapidapi.com/similarity/", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "X-RapidAPI-Key": rapidApiKey,
-          "X-RapidAPI-Host": "twinword-text-similarity-v1.p.rapidapi.com"
-        },
-        body: JSON.stringify({
-          text1: title1,
-          text2: title2
-        })
-      });
-      const data = await response.json();
-      return data.similarity; // Retourne le score de similarité entre 0 et 1
+    async function getEmbeddingsForArticles(articles) {
+      const embeddings = [];
+      for (const article of articles) {
+        const content = `${article.title || ""} ${article.description || ""}`;
+        const embedding = await getEmbedding(content);
+        embeddings.push(embedding);
+      }
+      return embeddings;
     }
 
-    // Fonction pour regrouper les articles par similarité de titre
-    async function categorizeArticles(articles) {
-      const threshold = 0.7; // Ajuster pour un regroupement plus strict ou plus large
-      const categories = [];
+    async function getEmbedding(text) {
+      const response = await fetch("https://api-inference.huggingface.co/models/sentence-transformers/all-MiniLM-L6-v2", {
+        method: "POST",
+        headers: {
+          "Authorization": `Bearer ${huggingFaceApiKey}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ inputs: text })
+      });
+      const data = await response.json();
+      return data[0]; // Le vecteur d'embedding
+    }
 
-      for (let i = 0; i < articles.length; i++) {
-        const article = articles[i];
-        const title = article.title || "Sans titre";
+    // Clustering des articles par similarité
+    function clusterArticles(articles, embeddings) {
+      const threshold = 0.8; // Ajuster pour un regroupement plus strict
+      const clusters = [];
 
-        let categoryFound = false;
+      articles.forEach((article, index) => {
+        const embedding = embeddings[index];
+        let addedToCluster = false;
 
-        for (const category of categories) {
-          // Utilise la similarité de titre pour déterminer le regroupement
-          const similarity = await getSimilarity(category.articles[0].title, title);
+        for (const cluster of clusters) {
+          const similarity = cosineSimilarity(cluster.embedding, embedding);
           if (similarity >= threshold) {
-            category.articles.push(article);
-            categoryFound = true;
+            cluster.articles.push(article);
+            addedToCluster = true;
             break;
           }
         }
 
-        if (!categoryFound) {
-          categories.push({
-            articles: [article]
-          });
+        if (!addedToCluster) {
+          clusters.push({ embedding, articles: [article] });
         }
-      }
+      });
 
-      return categories.map((cat, index) => ({
+      return clusters.map((cluster, index) => ({
         category: `Sujet ${index + 1}`,
-        articles: cat.articles
+        articles: cluster.articles
       }));
     }
 
-    // Fonction pour afficher les catégories et articles
+    // Calcul de la similarité cosinus
+    function cosineSimilarity(vecA, vecB) {
+      let dotProduct = 0;
+      let normA = 0;
+      let normB = 0;
+
+      for (let i = 0; i < vecA.length; i++) {
+        dotProduct += vecA[i] * vecB[i];
+        normA += vecA[i] ** 2;
+        normB += vecB[i] ** 2;
+      }
+
+      return dotProduct / (Math.sqrt(normA) * Math.sqrt(normB));
+    }
+
+    // Afficher les catégories et articles
     function displayCategories(categorizedArticles) {
       const container = document.getElementById("categories-container");
       container.innerHTML = "";
